fixed more spacing

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   }
 
 .card {
-  width: 71%;
+  width: 73%;
   border-color: #0B274A;
   border-width: 3px;
   border-radius: 8px;
@@ -102,8 +102,4 @@ h2, #today, .card-title {
 
 #currentDay {
   font-weight: 600;
-}
-
-.display-3, #subheader {
-  margin-left: 65px;
 }
